--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -15,6 +15,10 @@ a {
     color: #3e2723;
 }
 
+hr {
+    border: 1px #3e2723 solid;
+}
+
 /* for header */
 .nav {
     background-color: #F5F5DC;
@@ -58,6 +62,27 @@ select, select:focus{
 }
 
 /* for homepage */
+#main-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+
+} 
+
+.big-header {
+    font-size: 45px;
+}
+
+.header-note {
+    padding: 0 30px;
+    text-align: center;
+    max-width: 800px;
+    margin-bottom: 30px;
+}
+
 .card-container {
     display: flex;
     flex-wrap: wrap;
@@ -66,6 +91,9 @@ select, select:focus{
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     background: #FFFFFF;
     border-radius: 8px;
     width: 200px;
@@ -76,12 +104,22 @@ select, select:focus{
   
   .card:hover {
     box-shadow: 0 6px 20px rgba(62, 39, 35, 0.25);
+    transform: translateY(-10px);
+    transition: all 0.6 ease-in-out;
   }
 
   .card img {
     width: 100%;
+    height: 270px;
   }
 
-  .card h2 , h3{
-    font-size: 16px;
+  .card h2 {
+    font-size: 17px;
   }
+
+  .card h3 {
+    font-size: 14px;
+  }
+
+
+
